# DarkClient

./: Cargo.toml  README.md  conversion.py
.github/workflows/: build.yml
agent_loader/: Cargo.toml  build.rs
agent_loader/src/: lib.rs
client/: Cargo.toml
client/src/: client.rs  gui.rs  lib.rs
client/src/mapping/: class.rs  class_type.rs  method.rs  minecraft_version.rs  mod.rs
client/src/mapping/client/: minecraft.rs  window.rs  world.rs
client/src/mapping/entity/: mod.rs  player.rs
client/src/mapping/java/: mod.rs
client/src/module/: fly.rs  mod.rs
injector/: Cargo.toml
injector/src/: main.rs  tui.rs
injector/src/platform/: unix.rs  windows.rs
