[workspace]
resolver = "2"
members = [
    "injector",
    "client"
, "agent_loader"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
egui = "0.29.0"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence"
]}
log = "0.4.25"
simplelog = "0.12.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
