[package]
name = "agent_loader"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "agent_loader"
crate-type = ["cdylib"]

[features]
default = ["ctor/used_linker"]
used_linker = []

[dependencies]
ctor = "0.2.8"
log = "0.4.25"
simplelog = "0.12.2"
libloading = "0.8.0"
jni = "0.21"
libc = "0.2"