[package]
name = "client"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui.workspace = true
eframe.workspace = true
winit = "0.30"
log.workspace = true
simplelog.workspace = true
jni = "0.21.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"