[package]
name = "injector"
version.workspace = true
edition.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
log.workspace = true
simplelog.workspace = true
proc-maps = "0.4.0"
crossterm = "0.29"

[target.'cfg(target_os = "linux")'.dependencies]
ptrace-inject = "0.1.2"